#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

- =configure_dev_terminal= recipe

- install configuration for =texlive=

*** Xmobar

- indicator for network ESSID and quality

- indicator for usage and expected lifetime of battery

** Changed

- XScreenSaver disabled

** Fixed

- installer not detecting distribution when there were
  non-word characters after the name

* 0.10.0 - 2019-11-12

** Added

- shell command for testing microphone

*** Emacs

- confirmation when quitting Emacs

- =helm-org= dependency

- support for viewing next actions categorised by energy

- =transient= as new configuration dependency

**** org-brain

- binding for jumping to friend items (=gf=)
- binding for jumping to history items (=gh=)
- binding for jumping to pinned items (=gp=)
- new academic brain
- support for switching brains via =SPC o B=

*** Installer

- new =with_default_config= helper for installing a program
  with the default configuration

- support for AUR packages
  - installation
  - query latest version

- support for new commands for Arch Linux configuration
  - =version current=
  - =version latest=

*** Xmobar

- battery percentage will now display in red if it drops to
  30%

- initial display for wireless network connection

- memory usage will now display in red if it hits 90%

** Changed

*** Emacs

- initial state for ~magit-stash-mode~ is now =motion=

- journal capture now records creation time in a property
  drawer

*** Installer

- default distribution is now Arch

- default manager configuration is now Arch

- some packages switched to use Arch AUR
  - =icecat=
  - =mu=
  - =recutils=

*** Xmobar

- CPU display now refreshes every 5 seconds instead of every 1

- now only shows hours and minutes in time

- now uses Inconsolata font

** Fixed

- xmobar not spawning when starting xmonad

*** Emacs

- =j= and =k= not behaving as down/up item when on an agenda
  heading with =org-super-agenda-mode= active
